--- a/css/style.css
+++ b/css/style.css
@@ -21,23 +21,34 @@ header img {
   height: calc( 100vh - 100px);
   padding:20px;
 }
-input{
+input ,select{
   width:350px;
-  height:40px;
+  height:50px;
   font-size: 24px;
   padding:10px;
   margin:10px;
   border: none;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 5px;
+  outline: none;
 }
-select, button{
+ button{
   width:350px;
-  height:40px;
+  height:50px;
+  background-color: #26b30e;
   font-size: 24px;
   padding:10px;
   margin:10px;
   border: none;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 5px;
+}
+main{
+  display: flex;
+}
+.tot-chilopage h2{
+  font-size: 20px;
+}
+.diagrammi{
+  display: flex;
 }
