--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@
   padding:0,inherit;
   box-sizing: border-box;
 }
+body{
+  font-size:20px;
+  font-family: 'Montserrat', sans-serif;
 
+}
 
 header {
   height: 100px;
@@ -24,7 +28,7 @@ header img {
 input ,select{
   width:350px;
   height:50px;
-  font-size: 24px;
+  font-size:20px;
   padding:10px;
   margin:10px;
   border: none;
@@ -36,7 +40,7 @@ input ,select{
   width:350px;
   height:50px;
   background-color: #26b30e;
-  font-size: 24px;
+  font-size:20px;
   padding:10px;
   margin:10px;
   border: none;
@@ -46,9 +50,24 @@ input ,select{
 main{
   display: flex;
 }
-.tot-chilopage h2{
-  font-size: 20px;
-}
+
 .diagrammi{
   display: flex;
+}
+.tot-chilopage{
+
+  font-family: 'Montserrat', sans-serif;
+}
+.tot-chilopage p{
+  padding:10px;
+}
+.secondsection{
+  padding:20px;
+}
+/* sfondoinput */
+.sfondo1{
+  background-image: url('../img/jos.jpg');
+}
+.sfondo2{
+  background-image: url('../img/bianca.png');
 }
